# GRAPHGEN

./: .all-contributorsrc  .gitignore  .gitmodules  AUTHORS  CMake.config.yaml  CMakeLists.txt  LICENSE  README.md  annotated.html  base__ruleset_8h.html  base__ruleset_8h_source.html  class_base_rule_set-members.html  class_base_rule_set.html  class_binary_drag-members.html  class_binary_drag.html  class_binary_drag_statistics-members.html  class_binary_drag_statistics.html  class_drag_compressor-members.html  class_drag_compressor.html  class_end_forest.html  class_forest_handler-members.html  class_forest_handler.html  class_generate_code_class-members.html  class_generate_code_class.html  class_merge_leaves-members.html  class_merge_leaves.html  class_merge_special_leaves-members.html  class_merge_special_leaves.html  class_performance_evaluator-members.html  class_performance_evaluator.html  classblocking__queue-members.html  classblocking__queue.html  classes.html  classfast__semaphore-members.html  classfast__semaphore.html  classhyper_1_1_hyper_cube-members.html  classhyper_1_1_hyper_cube.html  classsemaphore-members.html  classsemaphore.html  classthread__pool-members.html  (+235 more)
.github/workflows/: doc.yml
doc/: CTBE e alternativa a HyperCube.xlsx  example_tree.txt  t1.txt
doc/doxygen/: Doxyfile  header.html  numbering.css
doc/doxygen/mainpages/: home.h
doc/logo/: generation.pptx  graphgen.psd  graphgen_favicon.psd  graphgen_inline.psd  graphsgen.psd  graphsgen_inline.psd  neato_code.txt
doc/scripts/: readme2doc.py
include/: code_generator.h  conact_tree.h  condition_action.h  connectivity_graph.h  connectivity_mat.h  drag2optimal.h  drag_statistics.h  end_forest.h  file_manager.h  forest.h  forest2dag.h  forest_optimizer.h  forest_statistics.h  hypercube.h  image_frequencies.h  main.h  merge_set.h  output_generator.h  performance_evaluator.h  pixel_set.h  rule_set.h  ruleset_generator.h  tree.h  tree2dag_identities.h  utilities.h
rules/: ChainCode_rstable.yaml
rulesets/: ctbe_rstable.yaml
scripts/: generate_doc_and_deploy.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+90 more)
src/: code_generator.cpp  conact_tree.cpp  connectivity_graph.cpp  connectivity_mat.cpp  drag2optimal.cpp  drag_statistics.cpp  file_manager.cc  forest.cpp  forest2dag.cpp  forest_statistics.cpp  hypercube.cpp  image_frequencies.cpp  main.cpp  merge_set.cpp  output_generator.cpp  rule_set.cpp  ruleset_generator_bbdt.cpp  ruleset_generator_chen.cpp  ruleset_generator_rosenfeld.cpp  ruleset_generator_rosenfeld_3d.cpp  ruleset_generator_thin_hscp.cpp  ruleset_generator_thin_zs.cpp  tester.cpp  tree2dag_identities.cpp  utilities.cpp
src/Altro/: file_manager.h  image_frequencies.cpp  image_frequencies.h  main.cpp  ruleset_generator.h  ruleset_generator_bbdt.cpp  ruleset_generator_chen.cpp  ruleset_generator_ctbe.cpp  ruleset_generator_rosenfeld_3d.cpp  ruleset_generator_thin_ch.cpp  ruleset_generator_thin_gh.cpp  ruleset_generator_thin_hscp.cpp  ruleset_generator_thin_zs.cpp
src/ChainCode/: chaincode_ruleset.h
src/ChainCode/Cederberg_Spaghetti/: CMakeLists.txt  (+1 more)
src/Contour/: chaincode_ruleset.h
src/GRAPHGEN/: CMakeLists.txt  base_forest.h  base_ruleset.h  bbtd3d-36-reductiontable-5813-2829.inc  circularbuffer.h  collect_drag_stats.h  compression.cpp  compression.h  conact_code_generator.cpp  conact_code_generator.h  conact_tree.cpp  conact_tree.h  condition_action.h  config_data.cpp  config_data.h  connectivity_graph.cpp  connectivity_graph.h  connectivity_mat.h  constants.h  drag.h  drag2optimal.cpp  drag2optimal.h  drag_compressor.h  drag_statistics.cpp  drag_statistics.h  end_forest.h  fast_drag_optimizer.h  find_optimal_drag.h  forest.cpp  forest.h  forest2dag.cpp  forest2dag.h  forest_handler.h  forest_optimizer.h  forest_statistics.cpp  forest_statistics.h  graph_code_generator.cpp  graph_code_generator.h  graphgen.h  graphsgen.h  (+30 more)
src/GRAPHSGEN/: CMakeLists.txt  base_forest.h  code_generator.h  conact_code_generator.cpp  conact_code_generator.h  conact_tree.cpp  conact_tree.h  condition_action.h  config_data.h  connectivity_graph.cpp  connectivity_graph.h  connectivity_mat.h  culo.h  drag.h  drag2optimal.cpp  drag_compressor.h  drag_statistics.cpp  drag_statistics.h  fast_drag_optimizer.h  find_optimal_drag.h  forest.cpp  forest.h  forest_handler.h  forest_optimizer.h  forest_statistics.cpp  forest_statistics.h  graph_code_generator.cpp  graph_code_generator.h  graphsgen.h  hypercube.cpp  hypercube.h  magic_optimizer.h  merge_set.h  output_generator.cpp  output_generator.h  pixel_set.h  remove_equal_subtrees.h  rule_set.h  system_info.h  tree.h  (+2 more)
src/Labeling/: ctbe_ruleset.h  grana3d_19c_211b_ruleset.h  grana3d_26c_221b_ruleset.h  grana3d_36c_222b_ruleset.h  grana3d_ruleset.h  grana_ruleset.h  rosenfeld3d_ruleset.h  rosenfeld_ruleset.h
src/Morphology/: dilation_ruleset.h  erosion_ruleset.h  opening_ruleset.h
src/Old/: bbdt3d_main.cpp  file_manager.cc  file_manager.h  grana3d_ruleset.h  image_frequencies.cpp  image_frequencies.h  main.cpp  main_2.cpp  ruleset_generator.h  ruleset_generator_chen.cpp  ruleset_generator_ctbe.cpp  ruleset_generator_rosenfeld_3d.cpp
src/SAUF/: sauf_main.cpp
src/Thinning/: chenhsu_ruleset.h  guohall_ruleset.h  hscp_ruleset.h  zangsuen_ruleset.h
tmp/: rosenfeld.rules  samples.txt
tools/dot/: fr_plot.txt  fr_plot_fulltree.txt  graph.txt  main_plot - Copia.txt  main_plot.txt  plot.txt  plot_fulltree.txt  prova.txt
treegen/: treegen.sln  treegen.vcxproj  treegen.vcxproj.filters
utils/: CTBE e alternativa a HyperCube.xlsx  ChainCode.xlsx  example_rules.txt  rosenfeld_neato_3d_connected_component_graph_.txt  t1.txt  t2.txt
(+97 files in other folders)
